--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ bleach=4.1.0=pyhd3eb1b0_0
 bottleneck=1.3.5=py39h7deecbd_0
 brotli=1.0.9=h5eee18b_7
 brotli-bin=1.0.9=h5eee18b_7
-ca-certificates=2023.08.22=h06a4308_0
+ca-certificates=2023.11.17=hbcca054_0
 cffi=1.15.1=py39h5eee18b_3
 click=8.1.7=py39h06a4308_0
 colorama=0.4.6=py39h06a4308_0
@@ -23,6 +23,7 @@ comm=0.1.2=py39h06a4308_0
 contourpy=1.0.5=py39hdb19cb5_0
 cycler=0.11.0=pyhd3eb1b0_0
 cyrus-sasl=2.1.28=h52b45da_1
+cython=0.29.30=py39h5a03fae_0
 dbus=1.13.18=hb2f20db_0
 debugpy=1.6.7=py39h6a678d5_0
 decorator=5.1.1=pyhd3eb1b0_0
@@ -58,9 +59,11 @@ krb5=1.20.1=h143b758_1
 lcms2=2.12=h3be6417_0
 ld_impl_linux-64=2.38=h1181459_1
 lerc=3.0=h295c915_0
+libblas=3.9.0=1_h86c2bf4_netlib
 libbrotlicommon=1.0.9=h5eee18b_7
 libbrotlidec=1.0.9=h5eee18b_7
 libbrotlienc=1.0.9=h5eee18b_7
+libcblas=3.9.0=5_h92ddd45_netlib
 libclang=14.0.6=default_hc6dbbc7_1
 libclang13=14.0.6=default_he11475f_1
 libcups=2.4.2=h2d74bed_1
@@ -68,7 +71,10 @@ libdeflate=1.17=h5eee18b_1
 libedit=3.1.20221030=h5eee18b_0
 libffi=3.4.4=h6a678d5_0
 libgcc-ng=11.2.0=h1234567_1
+libgfortran-ng=13.2.0=h69a702a_0
+libgfortran5=13.2.0=ha4646dd_0
 libgomp=11.2.0=h1234567_1
+liblapack=3.9.0=5_h92ddd45_netlib
 libllvm14=14.0.6=hdb19cb5_3
 libpng=1.6.39=h5eee18b_0
 libpq=12.15=hdbd6064_1
@@ -114,6 +120,7 @@ packaging=23.1=py39h06a4308_0
 pandas=2.1.1=py39h1128e8f_0
 pandocfilters=1.5.0=pyhd3eb1b0_0
 parso=0.8.3=pyhd3eb1b0_0
+patsy=0.5.6=pyhd8ed1ab_0
 pcre=8.45=h295c915_0
 pexpect=4.8.0=pyhd3eb1b0_3
 pickleshare=0.7.5=pyhd3eb1b0_1003
@@ -124,11 +131,12 @@ ply=3.11=py39h06a4308_0
 prometheus_client=0.14.1=py39h06a4308_0
 prompt-toolkit=3.0.36=py39h06a4308_0
 psutil=5.9.0=py39h5eee18b_0
-ptitprince=0.2.7=pypi_0
+ptitprince=0.2.5=py39h3811e60_3
 ptyprocess=0.7.0=pyhd3eb1b0_2
 pure_eval=0.2.2=pyhd3eb1b0_0
 pycparser=2.21=pyhd3eb1b0_0
 pygments=2.15.1=py39h06a4308_1
+pyhamcrest=2.0.4=pyhd8ed1ab_0
 pyparsing=3.0.9=py39h06a4308_0
 pyqt=5.15.10=py39h6a678d5_0
 pyqt5-sip=12.13.0=py39h5eee18b_0
@@ -137,13 +145,15 @@ python=3.9.18=h955ad1f_0
 python-dateutil=2.8.2=pyhd3eb1b0_0
 python-fastjsonschema=2.16.2=py39h06a4308_0
 python-tzdata=2023.3=pyhd3eb1b0_0
+python_abi=3.9=2_cp39
 pytz=2023.3.post1=py39h06a4308_0
 pyzmq=23.2.0=py39h6a678d5_0
 qt-main=5.15.2=h53bd1ea_10
 readline=8.2=h5eee18b_0
 rich=13.3.5=py39h06a4308_0
-scipy=1.11.3=pypi_0
-seaborn=0.11.0=pypi_0
+scipy=1.8.1=py39he49c0e8_0
+seaborn=0.13.1=hd8ed1ab_0
+seaborn-base=0.13.1=pyhd8ed1ab_0
 send2trash=1.8.0=pyhd3eb1b0_1
 setuptools=68.0.0=py39h06a4308_0
 shellingham=1.5.0=py39h06a4308_0
@@ -153,6 +163,7 @@ sniffio=1.2.0=py39h06a4308_1
 soupsieve=2.5=py39h06a4308_0
 sqlite=3.41.2=h5eee18b_0
 stack_data=0.2.0=pyhd3eb1b0_0
+statsmodels=0.13.2=py39hce5d2b2_0
 tbb=2021.8.0=hdb19cb5_0
 terminado=0.17.1=py39h06a4308_0
 tinycss2=1.2.1=py39h06a4308_0
